# hello-calc

./: README.md  prd.md  project.yaml  pyproject.toml
.github/workflows/: ci.yml
src/hello_calc/: __init__.py  calc.py
tests/: test_calc.py
tests/acceptance/: test_add-unit-tests-for-all-arithmetic-functi.py  test_add-unit-tests-for-arithmetic-functions.py  test_add-unit-tests-for-arithmetic-module.py  test_configure-and-verify-ruff-and-mypy-stric.py  test_configure-linting-and-type-checking-tool.py  test_configure-ruff-and-mypy-strict-tooling.py  test_create-project-scaffolding-and-packaging.py  test_implement-core-arithmetic-functions-in-c.py  test_implement-core-arithmetic-functions.py  test_implement-core-arithmetic-module-with-ty.py  test_implement-core-arithmetic-module.py  test_re-export-arithmetic-functions-from-init.py  test_re-export-arithmetic-functions-from-pack.py  test_scaffold-packaging-metadata-for-hello-ca.py  test_scaffold-project-packaging.py  test_scaffold-project-structure-and-tooling-c.py  test_set-up-project-packaging-and-tooling-con.py  test_set-up-project-scaffolding-for-hello-cal.py  test_verify-mypy-strict-and-ruff-compliance.py
