[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-calc"
version = "0.1.0"
description = "A tiny Python arithmetic library used to test the agentic build platform end-to-end."
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "hatchling"]

[tool.mypy]
strict = true
disallow_untyped_calls = true
disallow_any_unimported = true
no_implicit_reexport = true

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/acceptance/*" = ["E501", "E741", "F401"]

