[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-calc"
version = "0.1.0"
description = "A tiny Python arithmetic library used to test the agentic build platform end-to-end."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
]

[tool.mypy]
strict = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/acceptance/*" = ["ALL"]
